--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .container {
-  height: 100vh;
+  height: 100%;
   background-color: #E5E5E5;
   width: 960px;
   padding-top: 50px;
