--- a/src/style.css
+++ b/src/style.css
@@ -1,110 +1,124 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
-
 body {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin: 0;
-  font-family: "Open Sans", sans-serif;
-  height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin: 0;
+    font-family: "Open Sans", sans-serif;
+    height: 100%;
 }
 
 ul {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
 }
 
 .container {
-  height: 100%;
-  background-color: #E5E5E5;
-  width: 960px;
-  padding-top: 50px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -ms-flex-line-pack: start;
-      align-content: flex-start;
-}
-/* рассинхрон с SASS */
-@media (max-width: 959px) {
-  .container {
-    width: 100%;
-  }
-  .row {
+    height: 100%;
+    background-color: #E5E5E5;
+    width: 960px;
+    padding-top: 50px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-flow: row wrap;
     flex-flow: row wrap;
-  }
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
 }
 
 .row {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
 }
 
 .row_btwn {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-bottom: 20px;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 [class*='col-'] {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin-right: -5px;
-  margin-left: -5px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    margin-right: -5px;
+    margin-left: -5px;
 }
 
 [class*='col-side'] {
-  width: 25%;
-  min-width: 240px;
+    width: 25%;
+    min-width: 240px;
 }
 
 [class*='col-main'] {
-  width: 50%;
-  min-width: 500px;
+    width: 50%;
+    min-width: 500px;
 }
 
 .card {
-  background: #FFFFFF;
-  -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-  border-radius: 5px;
-  padding: 20px;
-  margin: 10px;
+    background: #FFFFFF;
+    -webkit-box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    padding: 20px;
+    margin: 10px;
 }
 
 [class*="text-grey"] {
-  font-size: 12px;
-  line-height: 18px;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  color: #A0B0B9;
+    font-size: 12px;
+    line-height: 18px;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    color: #A0B0B9;
 }
 
 [class*="fw-bold"] {
-  font-size: 14px;
-  line-height: 21px;
-  color: #4A4A4A;
+    font-size: 14px;
+    line-height: 21px;
+    color: #4A4A4A;
+}
+
+
+/* рассинхрон с SASS */
+
+@media (max-width: 959px) {
+    .container {
+        width: 100%;
+    }
+    .row {
+        flex-flow: row wrap;
+    }
+}
+
+@media (max-width: 501px) {
+    [class*='col-main'] {
+        width: 100%;
+        min-width: fit-content;
+    }
 }
