--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
+html  {
+    height: 100%;
+}
 body {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -26,6 +29,7 @@ h6 {
 }
 
 .container {
+    min-height: 100%;
     background-color: #E5E5E5;
     width: 960px;
     padding-top: 50px;
