--- a/src/components/Sidebar/Filter/style.css
+++ b/src/components/Sidebar/Filter/style.css
@@ -77,7 +77,7 @@
 
 .filter__input:checked + label::before {
   border: 1px solid #2196F3;
-  background-image: url("../../layout/checkmark.svg");
+  background-image: url("./checkmark.svg");
 }
 /* рассинхрон с SASS */
 .buffered + label::before {
