--- a/src/components/WaitingTimer/style.css
+++ b/src/components/WaitingTimer/style.css
@@ -1,11 +1,9 @@
 .timeout {
   position: fixed;
   top: 0;
-  left: 0;
-  height: 2em;
+  height: 1em;
   background-color: #2196F3;
-
-  width: 0;
+  width: 20%;
   opacity: 0;
   transition: .5s;
 }
@@ -17,6 +15,9 @@
 .timeout__tip {
   color: #E5E5E5;
   font-weight: 400;
+  font-size: 0.9em;
+  line-height: 1em;
+  font-style: italic;
   position: fixed;
   top: 0;
   left: 0;
@@ -24,7 +25,6 @@
   width: 100%;
   margin: 0 auto;
   z-index: 1000;
-
   opacity: 0;
 }
 .timeout__tip_run {
